会員登録の定義追加
